# Rechnung

./: .dockerignore  .flake8  .gitignore  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  Dockerfile  README.md  compose.yaml  entrypoint.sh  justfile  manage.py  pyproject.toml  setup.sh
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: django.yml  docker.yml  lint.yml  on_tag.yml  release.yml
accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/templates/registration/: login.html  signup.html
docs/: conf.py  index.rst
docs/usage/: installation.rst
invoice/: admin.py  apps.py  constants.py  epc_qr.py  errors.py  forms.py  invoice_number_generator.py  models.py  pdf_generator.py  tests.py  urls.py  views.py
invoice/locale/de/LC_MESSAGES/: django.po
invoice/migrations/: 0001_initial.py  0002_customer_invoice.py  0003_alter_invoice_date_invoiceitem.py  0003_invoiceitem.py  0004_alter_invoice_date_alter_invoiceitem_quantity.py  0004_alter_invoiceitem_quantity.py  0005_alter_invoice_date.py  0005_alter_invoice_date_alter_invoiceitem_price.py  0006_alter_invoice_date_alter_invoiceitem_price.py  0006_alter_invoiceitem_price.py  0007_alter_invoice_date_alter_invoiceitem_price.py  0007_alter_invoiceitem_price.py  0008_alter_customer_email.py  0008_alter_customer_email_alter_invoice_date.py  0009_alter_customer_email_alter_invoiceitem_price_and_more.py  0010_alter_invoiceitem_price.py  0011_alter_invoice_invoice_number_and_more.py  0011_vendor_tax_id.py  0012_merge_20241122_1820.py  0013_bankaccount_vendor_bank_account.py  0014_remove_address_number_address_postcode_and_more.py  0015_alter_bankaccount_iban.py  0016_rename_street_address_line_1_address_line_2_and_more.py  0017_alter_address_line_2_alter_address_line_3.py  0018_address_state.py  0019_alter_customer_address.py  0020_alter_vendor_address_alter_vendor_bank_account.py  0021_alter_bankaccount_iban.py  0022_alter_vendor_company_name_and_more.py  0023_alter_invoiceitem_quantity_alter_invoiceitem_tax.py  0024_alter_invoiceitem_quantity.py  0025_invoice_currency.py  0026_invoice_due_date_alter_invoice_currency_and_more.py  0027_remove_invoice_due_date_gte_date_and_more.py  0028_alter_currency.py  0028_remove_invoice_due_date_gte_date_and_more.py  0029_alter_currency.py  0030_merge_20241202_1221.py  0031_alter_address_options_alter_bankaccount_options_and_more.py  0031_invoice_delivery_date.py  (+33 more)
invoice/templates/invoice/: address_confirm_delete.html  address_form.html  address_list.html  bankaccount_form.html  bankaccount_list.html  customer_confirm_delete.html  customer_form.html  customer_list.html  invoice_confirm_delete.html  invoice_form.html  invoice_list.html  invoice_paid.html  invoiceitem_confirm_delete.html  start.html  vendor_confirm_delete.html  vendor_form.html  vendor_list.html
locale/de/LC_MESSAGES/: django.po
proxmox/: compose.yaml  setup.sh
rechnung/: asgi.py  prod_settings.py  settings.py  test_postgres_settings.py  test_settings.py  urls.py  wsgi.py
rechnung/models/: address.py  vendor.py
templates/: base.html
