[project]
name = "rechnung"
version = "0.3.5"
description = ""
authors = [
    { name = "Segelzwerg", email = "25705862+Segelzwerg@users.noreply.github.com" },
    { name = "iTitus", email = "iTitus@users.noreply.github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "reportlab>=4.4",
    "schwifty>= 2025.9",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.3"
]

[project.urls]
homepage = "https://github.com/Segelzwerg/Rechnung"
source = "https://github.com/Segelzwerg/Rechnung"
documentation = "https://rechnung-django.readthedocs.io"
issues = "https://github.com/Segelzwerg/Rechnung/issues"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.11",
    "pylint>=3.3",
    "pylint-django>=2.6",
    "bandit>=1.9",
    "flake8>=7.3",
    "coverage>=7.12",
    "hypothesis>=6.148",
    "black>=25.12",
    "ruff>=0.14",
]
docs = [
    "sphinx>=8.2.0",
    "sphinx-rtd-theme>=3.0",
]

[tool.bandit]
exclude_dirs = ["**/migrations", "**/test*.py", "**/*settings.py"]

[tool.pylint]
max-line-length = 120
load-plugins = "pylint_django"
ignore-paths = [".*/migrations", ".*/.*settings.py", ".*/tests.py"]
